<resources>
    <string name="app_name">MyApp</string>
    <string name="user_name">Имя</string>
    <string name="user_surname">Фамилия</string>
    <string name="user_phone_number">Номер телефона</string>
    <string name="user_email">Электронная почта</string>
    <string name="user_password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="go_sign_in">Перейти к входу</string>
    <string name="go_sign_up">Перейти к регистрации</string>
    <string name="user_info_title">Информация о пользователе</string>
    <string name="logout_button">Выйти из аккаунта</string>
    <string name="not_logged_in">Не авторизован</string>
    <string name="logout_success">Вы успешно вышли из аккаунта</string>
    <string name="logout_error">Ошибка при выходе из аккаунта</string>

    <string-array name="car_names">
        <item name="bmw_x5">BMW X5 к321нр36</item>
        <item name="lada_granta">Lada Granta к131не136</item>
        <item name="volvo_s60">Volvo S60 о878о77</item>
    </string-array>
    <string-array name="job_names">
        <item name="oil_change">Замена масла</item>
        <item name="air_filter_change">Замена воздушного фильтра</item>
    </string-array>
    <string-array name="comments">
        <item name="oil_change_comment">Масло 5w30, фильтр HU9254x</item>
        <item name="air_filter_comment">Фильтр 13718577170</item>
    </string-array>
</resources>