<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnGoToRegistration"
        android:layout_width="209dp"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nocturne"
        android:text="@string/go_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/nocturne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="210dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurnameLogin" />

    <EditText
        android:id="@+id/etSurnameLogin"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/user_surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameLogin" />

    <EditText
        android:id="@+id/etNameLogin"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="34sp"
        android:fontFamily="@font/nocturne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />
</androidx.constraintlayout.widget.ConstraintLayout>